--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:dar1DNRrBpM0DpnoMURoRmCoGECHSYpzpUEZMUaDCjA=
 APP_DEBUG=true
-APP_URL=http://yanxuxuapi.yanxuxu.cn:9980/
-APP_URL_API=http://yanxuxuapi.yanxuxu.cn:9980/api/
-APP_URL_PATH=http://yanxuxuapi.yanxuxu.cn:9980/uploads/
+APP_URL=http://mingde.com/
+APP_URL_API=http://mingde.com/api/
+APP_URL_PATH=http://mingde.com/uploads/
 
 LOG_CHANNEL=stack
 
